--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -2,12 +2,14 @@
     margin: 0;
     padding: 0;
 }
+
 :root {
     --big: 300px;
-    --title:80px;
+    --title: 80px;
+    --text: 25px;
     --large: 500px;
     --medium: 150px;
-    --menu:30px;
+    --menu: 30px;
     --small: 40px
 }
 
@@ -25,10 +27,10 @@
     height: var(--large);
     float: left;
     margin-left: 2%;
-    box-shadow: 15px 15px 25px black; 
+    box-shadow: 15px 15px 25px black;
 }
 
-.container>table{
+.container>table {
     height: var(--big);
     width: var(--large);
     font-size: var(--small);
@@ -37,19 +39,23 @@
     margin-right: 4%;
 
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
     font-weight: bold;
 }
-a:hover{
+
+a:hover {
     color: white;
 
 }
-.menu{
+
+.menu {
     font-size: var(--menu);
     background-color: rgb(4, 188, 40);
     position: fixed;
+    margin-top: 0;
     width: 100%;
     height: 7%;
     padding: 1% 0 0 1%;
@@ -57,14 +63,31 @@ a:hover{
     text-align: center;
 
 }
-.menu>table{
+
+.menu>table {
     font-size: var(--menu);
     margin: 0 auto 0 auto;
     width: var(--large);
     text-align: center;
 
 }
-/*table,td,tr{
-    border: solid black;
-    border-collapse:collapse ;
+
+.testo {
+    font-size: var(--text);
+    margin: 6% 0 2% 0.2%;
+    height: 20%;
+    width: 60%;
+    text-align: justify;
+    background-color: rgb(85, 200, 125);
+    padding: 0 1% 0 1%;
+    box-shadow: 6px 6px 15px black;
+
+}
+
+.img>img{
+    margin: 6% 3% 0 0;
+    float: right;
+    height: 280px;
+    border-radius: 10%;
+    box-shadow: 8px 8px 15px black;
 }
