--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -53,7 +53,7 @@ a:hover {
 
 .menu {
     font-size: var(--menu);
-    background-color: rgb(4, 188, 40);
+    background-color: rgb(1, 218, 77);
     position: fixed;
     margin-top: 0;
     width: 100%;
@@ -78,7 +78,7 @@ a:hover {
     height: 20%;
     width: 60%;
     text-align: justify;
-    background-color: rgb(85, 200, 125);
+    background-color: bisque;
     padding: 0 1% 0 1%;
     box-shadow: 6px 6px 15px black;
 
